NEWS - OpenPrinting CUPS Filters v1.20.3 - 2018-04-12
-----------------------------------------------------

CHANGES IN V1.20.4

	- libcupsfilters: Fixed human-readable name of the OutputBin
	  option in the PPD generator.
	- pdftoopvp: Silence compiler warning (Issue #42).
	- cups-browsed: If the user modifies/overwrites a print queue
	  created by cups-browsed, it will now not only be
	  automatically released from the control of cups-browsed, but
	  we also create a replacement for our generated local queue
	  under a new name.
	- cups-browsed: Make URIS for using the implicitclass backend
	  correctly working also with queue names containing an '@'
	  character.
	- braille: Strengthen error checking (Pull request #41).
	- braille: Index: Replace bogus characters with space (Pull
          request #41).
	- braille: Add print and braille page number options (Pull
          request #41).
	- braille: Index: Use standard duplex cups option (Pull
          request #41).
	- cups-browsed: Moved auto-generation of PPD file for IPP
	  network printers from create_remote_printer_entry()
	  function to update_cups_queues(). This allows re-creating
	  accidentally removed or overwritten local queues without
	  losing the PPD file.
	- braille: Add option to pick hyphenation rule according to
	  current locale and make it the default for second
	  translation table. Thanks to Samuel Thibault for this patch
	  (Pull request #38 and #39).
	- braille: Remove generated defs on "make clean". Thanks to
	  Samuel Thibault for this patch (Pull request #38).
	- braille: Turn non-breakable spaces to spaces. Thanks to
	  Samuel Thibault for this patch (Pull request #38 and #39).
	- braille: Fix character encoding when extracting text. When
	  extracing text from a zip file or a pdf, the resulting text
	  is always utf-8 independently of the original locale, so we
	  need to force that. Thanks to Samuel Thibault for this patch
	  (Pull request #38).